# zenbookd

./: Cargo.toml  LICENSE.MD  README.MD  README.md
crates/zenbookd-cli/: Cargo.toml
crates/zenbookd-cli/src/: main.rs
crates/zenbookd-ipc/: Cargo.toml
crates/zenbookd-ipc/src/: lib.rs
crates/zenbookd-service/: Cargo.toml
crates/zenbookd-service/src/: ipc.rs  main.rs  wake.rs
crates/zenbookd-service/src/adapter/: adapter.rs  error.rs  mod.rs
crates/zenbookd-service/src/battery/: battery.rs  error.rs  mod.rs
crates/zenbookd-service/src/config/: config.rs  error.rs  mod.rs  state.rs
crates/zenbookd-service/src/wifi/: error.rs  mod.rs  wifi.rs
scripts/: install.sh  uninstall.sh  zenbookd.service
