[package]
name = "zenbookd-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "zenbookd"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
zenbookd-ipc.path = "../zenbookd-ipc"

log.workspace = true
env_logger.workspace = true

thiserror.workspace = true

serde_json.workspace = true
serde.workspace = true

colored = "3.1.1"

clap = {
    version = "4.6.1",
    features = ["derive"]
}
